# ai-goal

./: .gitignore  Cargo.toml  README.md  Todo.md
src/: checks.rs  lib.rs  main.rs  prompts.rs  tokens.rs  utils.rs
