[package]
name = "ai-goal"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
futures = "0.3.31"
hound = "3.5.1"
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["json", "stream"] }
serde_json = "1.0.140"
simple_logger = "5.0.0"
tokio = { version = "1.45.0", features = ["full"] }
whisper-rs = "0.14.3"

[dev-dependencies]
pretty_assertions = "1.4.1"
