[package]
name = "ai-goal"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
futures = "0.3.31"
hound = "3.5.1"
log = "0.4.27"
num_cpus = "1.17.0"
ollama-rs = "0.3.1"
reqwest = { version = "0.12.20", features = ["json", "stream"] }
serde_json = "1.0.140"
simple_logger = "5.0.0"
tiktoken-rs = "0.7.0"
tokio = { version = "1.45.1", features = ["full"] }
whisper-rs = "0.14.3"

[dev-dependencies]
pretty_assertions = "1.4.1"
